tests/NormalTests/paczka1/fuzzy1/15261659.err
Error in line 9: GwcYUu5x65 S241 94,6
Error in line 12: S5bj A116 11,6
Error in line 27: S5bj S241 70,3
Error in line 36: 1MiTp8BN A116 54,1
